Update CodeQL workflow for build configuration
Changed build configuration to use 'allyesconfig' and manual build mode.

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -115,14 +115,18 @@ jobs:
           make mrproper
           sudo apt-get update
           sudo apt-get install -y libelf-dev
-          make defconfig
+          make allyesconfig
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v4
         with:
           languages: c-cpp
-          build-mode: autobuild
+          build-mode: manual
           db-location: /tmp/codeql_db_${{ matrix.tag }}
+
+      - name: Build
+        run: |
+          make
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v4
